# nextcloud_appsignature

./: Cargo.toml  README.md
.github/: dependabot.yml
src/: error.rs  integrity.rs  keys.rs  lib.rs  package.rs  test.rs
