[package]
name = "nextcloud_appsignature"
version = "0.7.1"
authors = ["Christoph Wurst <christoph@winzerhof-wurst.at>"]
description = "Library to sign Nextcloud apps"
readme = "README.md"
repository = "https://github.com/ChristophWurst/nextcloud_appsignature"
keywords = ["nextcloud"]
license = "GPL-3.0"
exclude = [
    ".vscode",
]
edition = "2018"

[dependencies]
thiserror = "1.0"
base64 = "0.13"
rsa = "0.5"
sha2 = "0.9.3"
